--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/sql-wasm.js",
-              "src/sql-wasm.wasm",
-              "src/AWLT2008R2Sample.sqlite"
+              "src/assets"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
